refactor: Race의 getCars 메서드 제거
Race의 getCars에 접근한 후 이어서 Car의 Name과 Distance에 접근하지 못하도록, Race의 캡슐화를 지킨다.
- Race를 String 리스트가 아닌, Car 리스트로 생성한다.
- 테스트 코드에서 Race가 아닌 Car로 접근하여 then을 수행한다.
- Race가 아닌 Car만이 NumberGenerator에 의존한다.