@@ -14,32 +14,38 @@ class RaceTest {
     @DisplayName("레이스 생성 성공")
     @Test
     void raceTest() {
-        List<String> carNames = List.of("pobi", "woni");
+        Car pobi = new Car("pobi", forwardGenerator);
+        Car woni = new Car("woni", stopGenerator);
+        List<Car> cars = List.of(pobi, woni);
 
-        Assertions.assertThatCode(() -> new Race(carNames, stopGenerator))
+        Assertions.assertThatCode(() -> new Race(cars))
                 .doesNotThrowAnyException();
     }
 
     @DisplayName("레이스 생성 실패 : 중복된 자동차 이름")
     @Test
     void validateDuplicatesTest() {
-        List<String> carNames = List.of("pobi", "pobi", "woni");
+        Car pobi = new Car("pobi", forwardGenerator);
+        Car woni = new Car("pobi", stopGenerator);
+        List<Car> cars = List.of(pobi, woni);
 
-        Assertions.assertThatThrownBy(() -> new Race(carNames, stopGenerator))
+        Assertions.assertThatThrownBy(() -> new Race(cars))
                 .isInstanceOf(IllegalArgumentException.class)
-                .hasMessage("중복된 차 이름이 있습니다.");
+                .hasMessage("중복된 이름의 자동차가 존재합니다.");
     }
 
     @DisplayName("우승자 판별 성공")
     @Test
     void findWinnersTest() {
-        List<String> carNames = List.of("pobi", "woni");
+        Car pobi = new Car("pobi", forwardGenerator);
+        Car woni = new Car("woni", stopGenerator);
+        List<Car> cars = List.of(pobi, woni);
+        Race race = new Race(cars);
 
-        Race race = new Race(carNames, forwardGenerator);
+        pobi.move();
 
-        race.getCars().get(0).move();
         List<Car> winners = race.findWinners();
 
-        Assertions.assertThat(winners.get(0).getName()).isEqualTo("pobi");
+        Assertions.assertThat(winners.getFirst()).isEqualTo(pobi);
     }
 }
